Fixed sticky on tablet

--- a/css/career.css
+++ b/css/career.css
@@ -110,13 +110,13 @@
     z-index: -1;
 }
 
-.sticky { 
+/* .sticky { 
     position: sticky;
     position: -webkit-sticky;
 
-    top: 100px;
+    top: 0px;
     align-self: start;
-}
+} */
 
 .detail-page {
     /* margin-right: 2em; */
