--- a/css/hero.css
+++ b/css/hero.css
@@ -26,6 +26,7 @@ section.image-collage {
     background-color: white;
     color: black;
     border-bottom: 20px solid white;
+    overflow-x: hidden;    
     /* border: 1px solid red; */
 
     /* min-height: 1250px; */
