--- a/css/nav-modal.css
+++ b/css/nav-modal.css
@@ -8,16 +8,29 @@
   
       section.menu {
         position: fixed;
+        z-index: 200;
+        top: 3%;
+        left: 3%;
+  
+        width: 94%;
+        height: 90vh;
+  
+        color: white;
+        background-color: rgba(0,0,0,0.5);
+          
+        font-size: 14px;
+      }
+      section.menu::before {
+        content: '';
+        position: fixed;
+        z-index: 0;
         top: 0px;
         left: 0px;
   
         width: 100%;
         height: 100vh;
-  
-        color: white;
+          
         background-color: rgba(0,0,0,0.9);
-  
-        font-size: 14px;
       }
   
       section.menu .close-nav {
@@ -30,12 +43,15 @@
       }
   
       section.menu .menu-container {
+        position: relative;
         display: grid;
         grid-template-columns: 140px 1fr;
         height: 100%;
+        border: 1px solid white;
       }
   
       section.menu .menu-container .side-bar {
+        position: relative;
         width: 100%;
         height: 100%;
         display: flex;
@@ -71,6 +87,9 @@
         border-bottom: 1px solid white;
         border-left: 1px solid white;
         padding: 0 20px;      
+      }
+      .menu-items-column .row:last-of-type {        
+        border-bottom: 0px solid white;        
       }
   
       .menu-items-column .row > a {             
