--- a/css/projects.css
+++ b/css/projects.css
@@ -28,6 +28,7 @@ section.projects {
     align-items: center; */
 
     height: 100%;
+    overflow-x: hidden;    
 }
 
 section.projects .explore {
