--- a/js/components/pageSegments/pageSegments.css
+++ b/js/components/pageSegments/pageSegments.css
@@ -410,7 +410,7 @@ p.fs16 { font-size: 1.6em; max-width: 20em;}
     position: sticky;
     position: -webkit-sticky;
 
-    top: 100px;
+    top: 8px;
     align-self: start;
 }
 
